2012-05-01  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-11-10
        * Fix to JetEfficienciesMonTool from Hardeep.

2012-05-01  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-11-09
        * JobOptions update.

2012-04-25  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-11-08
        * Change to filling RMS plots in post processing.

2012-04-20  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-11-07
        * JobOptions update.

2012-04-18  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-11-06
        * Change eta/phi plots in EmEfficienciesMonTool to use
        * L1Calo phi range (0-2PI).

2012-04-05  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-11-05
        * Avoid running TileCellToTTL1 on all events when we
        * only need it for the first one.

2012-04-04  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-11-04
        * Eliminate need for L1CaloOfflineTriggerTowerTools.

2012-03-26  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-11-03
        * Update jobOptions for online monitoring.

2012-03-15  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-11-02
        * Cosmetic change to EmEfficienciesMonTool.

2012-03-15  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-11-01
        * Fix compilation errors.

2012-03-14  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-11-00
        * Add new tool JetEfficienciesMonTool from Hardeep.

2012-02-24  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-10-21
        * Coverity fix.

2012-02-23  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-10-20