@@ -1,3 +1,7 @@
+2012-05-08  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
+        * Tag as TrigT1CaloMonitoring-00-11-11
+        * Another fix from Hardeep.
+
 2012-05-01  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
         * Tag as TrigT1CaloMonitoring-00-11-10
         * Fix to JetEfficienciesMonTool from Hardeep.
